--- a/extensions/uploader/blocks/entry.liquid
+++ b/extensions/uploader/blocks/entry.liquid
@@ -15,6 +15,8 @@
   "name": "playground",
   "templates": ["page", "product"],
   "target": "section",
+  "stylesheet": "themeApp-283a9893.css",
+  "javascript": "themeApp-068387c8.js",
   "settings": []
 }
 {% endschema %}
