--- a/extensions/uploader/blocks/entry.liquid
+++ b/extensions/uploader/blocks/entry.liquid
@@ -13,10 +13,10 @@
 {% schema %}
 {
   "name": "playground",
-  "templates": ["page", "product"],
+  "templates": ["page", "product", "index"],
   "target": "section",
-  "stylesheet": "themeApp-283a9893.css",
-  "javascript": "themeApp-068387c8.js",
+  "stylesheet": "themeApp-b13f8b1a.css",
+  "javascript": "themeApp-f727dbc2.js",
   "settings": []
 }
 {% endschema %}
