conditionally render history if not empty

--- a/extensions/uploader/blocks/entry.liquid
+++ b/extensions/uploader/blocks/entry.liquid
@@ -15,7 +15,8 @@
   "name": "playground",
   "templates": ["page", "product", "index"],
   "target": "section",
-
+  "javascript": "themeApp-a97b758b.js",
+  "stylesheet": "themeApp-f897b102.css",
   "settings": []
 }
 {% endschema %}
