set up gh actions workflow

--- a/extensions/uploader/blocks/entry.liquid
+++ b/extensions/uploader/blocks/entry.liquid
@@ -15,6 +15,7 @@
   "name": "playground",
   "templates": ["page", "product", "index"],
   "target": "section",
+  "stylesheet": "themeApp-a685729b.css",
   "settings": []
 }
 {% endschema %}
