change color of accent

--- a/frontend/components/loader/Loader.module.css
+++ b/frontend/components/loader/Loader.module.css
@@ -7,11 +7,13 @@
 }
 
 .spinner>div {
-    background-color: rgba(134, 202, 144, 0.2);
+    /* background-color: rgba(134, 202, 144, 0.2); */
+    background-color: hsla(207, 100%, 40%, 0.205);
     height: 100%;
     position: absolute;
     width: 100%;
-    border: 2px solid rgb(19, 252, 0);
+    /* border: 2px solid rgb(19, 252, 0); */
+    border: 2px solid #0071CE
 }
 
 .spinner div:nth-of-type(1) {
